@@ -52,13 +52,19 @@
 						<dl>
 							<dt>server &nbsp; 127.127.40.X &nbsp; mode 1</dt>
 							<dd><br></dd>
-							<dt>fudge &nbsp; 127.127.40.X &nbsp; time1 0.NNN &nbsp; flag1 0|1</dt>
+							<dt>fudge &nbsp; 127.127.40.X &nbsp; time1 0.NNN &nbsp; flag1 0|1 &nbsp; flag2 0|1 &nbsp; time2 H</dt>
 							<dd>
 								<p>Time1 may specify a constant to be added to the time offset for the time from the receiver, a fixed-point decimal number in seconds. You may specify the time offset from several tens of milli-seconds ( 0.0NN seconds ) to a hundred and several tens of milli-seconds  ( 0.1NN seconds ) for this clock.</p>
-								<p>Flag1 has no effect for time synchronization. When flag1 is set to 1, status commands are issued before DATE and STIM commands, and write a response text into the clockstats file.</p>
+								<p>Time2 may specify a grace period in hours after the 'adjusted' reply of the STUS command stopped coming.<br>This hours is effective when both flag1 and flag2 are set to 1.</p>
+								<p>Flag1 has no effect for time synchronization unless flag2 is set to 1.<br>When flag1 is set to 1, status commands are issued before DATE and STIM commands, and write a response text into the clockstats file.</p>
 								<table border="1" summary="fudge flag1">
 									<tr><td>0 (Default)</td><td>DCST and STUS commands are not issued</td></tr>
 									<tr><td>1</td><td>DCST and STUS commands are issued</td></tr>
+								</table>
+								<p>Flag2 enables the time synchronization only when the reply of the STUS is 'adjusted'. When this functionality is used, flag1 must be set to 1 together.</p>
+								<table border="1" summary="fudge flag2">
+									<tr><td>0 (Default)</td><td>Always</td></tr>
+									<tr><td>1</td><td>'adjusted' only</td></tr>
 								</table>
 							</dd>
 						</dl>
@@ -193,6 +199,7 @@
 
 			<li>
 				<p><a name="mode-4">CITIZEN T.I.C. CO.,LTD. &nbsp; JJY-200</a> &nbsp; <a href="http://www.tic-citizen.co.jp/">http://www.tic-citizen.co.jp/</a> (Japanese only)</p><br>
+				<p>The JJY-200 became the end of sales in 2013.</p><br>
 				<dl>
 					<dt>NTP configuration ( ntp.conf )</dt>
 					<dd><br>
